--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "readmeFilename": "README.md",
   "nbbpm": {
-    "compatibility":   "<=1.0.0"
+    "compatibility":   "^1.1.0"
   },
   "scripts": {
     "2npm": "publish"
